gitops/runtime-hardening/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: demo

spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-dns
  namespace: demo

spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system

    ports:
    - protocol: UDP
      port: 53

    - protocol: TCP
      port: 53

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-same-app
  namespace: demo

spec:
  podSelector:
    matchLabels:
      app: secure-nginx

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: secure-nginx

  policyTypes:
  - Ingress
